--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body{
 h1{
     padding-top: 30px;
     color: white;
+    padding-left: 20px;
 }
 h3{
     color: white;
@@ -20,6 +21,7 @@ h3{
 h4{
     color: #707377;
     padding: 10px 0;
+    font-size: 14px;
 }
 
 .upgrade-button{
@@ -42,37 +44,123 @@ main{
 }
 
 main nav{
-    width: 100px;
     background-color: black;
     text-align: center;
-    padding-top: 5px;
+    padding: 5px 15px;
     z-index: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 85vh;
+    justify-content: flex-start;
+    height: calc(100vh -    100px);
+    position: relative;
 }
-main nav img,
-main nav svg{
+main nav .icon-list img{
     max-width: 40px;
+    /*max-width: 35%;*/
+    display: inline-block;
+    margin: 0 auto;
+}
+img[src="images/logo-small.svg"]{
+    max-width: 50px;
+    margin: 0 auto;
+}
+img[src="images/logo.svg"]{
+    display: none;
+}
+
+main nav span{
+    display: none;
+    width: 65%
+}
+main nav li{
+    display: flex;
+    text-align: left;
+    position: relative;
+}
+main nav li:hover:after,
+.vertical-active:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 3px;
+    margin-left: -8px;
+    background-color: #ADFF2F;
+}
+main nav .playlist-container{
+    display: none;
+    text-align: left;
+}
+main nav .playlist-container span{
+    font-size: 30px;
+    width: 30px;
+    line-height: 30px;
+    background-color: lightgray;
+    justify-self: flex-end;
+    text-align: center;
+    margin-right: 10px;
+    color: black
+}
+main nav .playlist-container li{
+    color: #707377;
+    font-weight: bold;
+    min-width: 100px;
+}
+main nav .playlist-container h5{
+    color: #707377;
+    line-height: 30px;
+    display: flex;
+    margin-top: 10px
+}
+main nav .playlist-container h4{
+    color: #707377;
+    width: 100%;
+}
+main nav .user-profile{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+main nav .user-profile div{
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+}
+
+main nav .user-profile span{
+    color: #707377;
+    display: none;
+    vertical-align: middle;
+    text-align: left;
+    padding-left: 15px;
 }
 main nav .user-profile i{
-    color: white;
-    padding-bottom: 30px;
-    display: block;
+    color: #707377;
+    display: inline-block;
     font-size: 30px;
+    vertical-align: middle;
 }
 main nav .user-profile img{
     border-radius: 50%;
     background-color: grey;
-    margin-bottom: 10px;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    vertical-align: middle;
+}
+main nav .user-profile h4{
+    color: white;
+    font-weight: bold;
+    display: inline-block;
 }
 main .main-section{
     text-align: left;
     background-color: #141922;
-    padding: 0 20px;
+    padding: 0 0;
     padding-top: 10vh;
-    max-width: 85%;
+    width: 100%;
 }
 main  .main-section .upgrade-container{
     display: flex;
@@ -88,11 +176,25 @@ main  .main-section .upgrade-container{
 }
 main .album-container{
     width: 100%;
-    height: 80vh;
-    overflow: auto;
+    height: 100%;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    width: 8px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.6); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #ADFF2F;
 }
 main .album-container ul{
     text-align: center;
+    padding: 10px;
 }
 main .album-container li{
     display: inline-block;
@@ -113,12 +215,12 @@ li.active:after{
     background-color: #ADFF2F;
 }
 ul{
-    padding-top: 10px;
+    padding-top: 15px;
     list-style: none;
     color: white;
 }
  ul li{
-    padding: 5px 0;
+    padding: 2px 0;
 }
 
 
@@ -127,14 +229,15 @@ ul{
 
 main .main-section .album-card-container{
     display: flex;
-    justify-content: space-between;
     align-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
     padding-top: 30px;
+    padding-left: 20px;
+    gap: 25px
 }
 main .main-section .album-card-container .album-card{
-    width: 48%;
+    width: 120px;
     height: fit-content;
     text-align: center;
 }
@@ -146,7 +249,7 @@ footer{
     bottom: 0;
     left: 0;
     right: 0;
-    height: 15vh;
+    height: 100px;
     background-color: #282828;
     z-index: 3;
     display: flex;
@@ -154,7 +257,6 @@ footer{
     align-items: center;
     justify-content: space-between;
     padding: 20px 10px;
-    min-width: 700px;
 }
 footer div{
     display: flex;
@@ -162,17 +264,19 @@ footer div{
 footer h4{
     color: white;
     padding-top: 0;
+    font-size: 14px;
     padding-bottom: 5px;
 }
 footer h5{
     color: #707377;
+    font-size: 12px;
 }
 footer p{
     color: white;
 }
 footer i{
     color: white;
-    font-size: 1.3em;
+    font-size: 20px;
 }
 footer .song-info{
     display: flex;
@@ -188,9 +292,13 @@ footer .song-info img{
 footer .song-info .song-description{
     display: inline-block;
 }
+footer .icon-left-container{
+    display: flex;
+    flex-direction: column;
+}
 footer .icon-left-container i{
     display: block;
-    padding: 0 30px;
+    padding: 0 10px;
     color: #707377;
 }
 footer .song-controller{
@@ -206,8 +314,8 @@ footer .song-controller .song-controls{
     align-items: center;
 }
 footer .song-controller .song-controls i{
-    font-size: 25px;
-    padding: 0 10px
+    font-size: 20px;
+    padding: 0 10px;
 }
 footer .song-controller .song-bar-container{
     width: 100%;
@@ -218,13 +326,13 @@ footer .song-controller .song-bar-container{
     flex-grow: 1;
 }
 .song-bar{
-    height: 10px;
+    height: 5px;
     background-color: #707377;
     border-radius: 10px;
     flex-grow: 1;
     margin: 0 10px;
     position: relative;
-    min-width: 70px;
+    min-width: 40px;
 }
 .song-bar::after{
     content: "";
@@ -238,7 +346,7 @@ footer .song-controller .song-bar-container{
     border-radius: 10px;
 }
 footer .icon-right-container{
-    padding: 0 30px;
+    padding: 0 10px;
     display: flex;
     gap: 15px
 }
@@ -250,4 +358,40 @@ footer .volume-container{
 footer .volume-container .volume-bar{
     flex-grow: 2;
     
+}
+
+@media screen and (min-width: 700px) {
+    main nav span{
+        display: inline-block;
+    }
+    main nav .playlist-container{
+        display: block;
+    }
+    img[src="images/logo-small.svg"]{
+        display: none;
+    }
+    img[src="images/logo.svg"]{
+        display: inline-block;
+        max-width: 200px;
+    }
+    main nav{
+        min-width: 30%;
+        align-content: flex-start;
+        overflow: auto;
+    }
+    main nav .icon-list li{
+        max-width: 150px;
+    }
+    main nav .user-profile div:nth-child(1){
+        border-bottom: solid 2px #707377;
+    }
+    main nav .user-profile span{
+        display: inline-block;
+    }
+
+}
+@media screen and (max-width: 700px) {
+    footer .volume-container .song-bar{
+        display: none;
+    }
 }
