--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ main nav li{
     display: flex;
     text-align: left;
     position: relative;
+    align-items: center;
 }
 
 /* Home Search Library li */
@@ -184,9 +185,12 @@ main nav{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: calc(100vh - 100px);
+    height: calc(100% - 100px);
     position: relative;
 }
+
+/* home search library section */
+
 main nav .icon-list img{
     width: 60px;
     padding: 0 10px;
@@ -196,12 +200,17 @@ main nav .icon-list img{
 }
 main nav .icon-list li:hover img{
     opacity: 100%;
-} 
+}
+
+/* small logo < 700px */
+
 img[src="images/logo-small.svg"]{
     max-width: 50px;
     margin: 0 auto;
     margin: 0 20px;
 }
+
+/* big logo > 700px */
 img[src="images/logo.svg"]{
     display: none;
     margin: 0 20px;
@@ -211,14 +220,19 @@ main nav span{
     display: none;
 }
 
+
+/* playlist section > 700px */
+
 main nav .playlist-container{
     display: none;
     text-align: left;
     padding-left: 20px;
 }
+
 main nav .playlist-container h2{
     padding-top: 15px;
 }
+
 main nav .playlist-container span{
     font-size: 30px;
     width: 30px;
@@ -236,12 +250,17 @@ main nav .playlist-container h5{
     display: flex;
     margin-top: 10px
 }
-main nav .playlist-container:hover span{
+
+main nav .playlist-container div:hover span{
     background-color: white;
 }
-main nav .playlist-container:hover h3{
+
+main nav .playlist-container div:hover h3{
     color: white;
 }
+
+/* down nav profile section */
+
 main nav .user-profile{
     flex-grow: 1;
     display: flex;
@@ -249,6 +268,7 @@ main nav .user-profile{
     justify-content: flex-end;
     padding: 0 20px;
 }
+
 main nav .user-profile div{
     display: flex;
     align-items: center;
@@ -262,6 +282,7 @@ main nav .user-profile span{
     text-align: left;
     padding-left: 15px;
 }
+
 main nav .user-profile i{
     color: #707377;
     display: inline-block;
@@ -269,6 +290,7 @@ main nav .user-profile i{
     vertical-align: middle;
     transition: 0.5s;
 }
+
 main nav .user-profile img{
     border-radius: 50%;
     background-color: grey;
@@ -280,13 +302,16 @@ main nav .user-profile img{
     object-fit: cover;
     object-position: center;
 }
+
 main nav .user-profile div:hover span{
     color: white
 }
+
 main nav .user-profile div:hover i{
     color: #ADFF2F;
     transform: scale(150%) rotate(360deg) ;
 }
+
 main nav .user-profile div:nth-child(2):hover img{
     border-radius: 0;
     transform: scale(140%)
@@ -313,11 +338,14 @@ main  .main-section .upgrade-container{
     padding-right: 10px;
     z-index: 1;
 }
+main .main-container{
+    overflow-y: scroll;
+    max-height: 80vh;
+}
 main .album-container{
     width: 100%;
     height: 100%;
     padding-bottom: 400px;
-    overflow-y: scroll;
 }
 ::-webkit-scrollbar {
     width: 8px;
@@ -348,6 +376,9 @@ main .main-section .album-card-container .album-card{
     text-align: center;
     position: relative;
 }
+main .album-card h2{
+    padding-top: 15px;
+}
 main .main-section .album-card-container .album-card:hover h2,
 main .main-section .album-card-container .album-card:hover h4{
     text-decoration: underline;
@@ -364,6 +395,7 @@ main .main-section .album-card-container .album-card:hover h4{
 }
 div.album-card .img-container{
     position: relative;
+    max-width: fit-content;
 }
 i[class="far fa-play-circle"]{
     font-size: 100px;
@@ -608,5 +640,21 @@ footer .volume-container .volume-bar{
     }
     nav .user-profile div{
         justify-content: center;
+    }
+    i[class="fas fa-volume-up"]{
+        position: relative;
+    }
+    i[class="fas fa-volume-up"]:hover::after{
+        content: "30%";
+        position: absolute;
+        top: -50px;
+        padding: 10px 10px;
+        font-size: 12px;
+        color: black;
+        background-color: rgba(255,255,255,0.5);
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 15px;
+
     }
 }
